FIXED: bridal image spacing

--- a/CSS/modern.css
+++ b/CSS/modern.css
@@ -1009,10 +1009,6 @@ button {
     aspect-ratio: 1;
 }
 
-.gallery-item:nth-child(3n+1) {
-    grid-row: span 2;
-}
-
 .gallery-item img {
     width: 100%;
     height: 100%;
